aggiunta main+footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
         In particolare abbiamo imparato a <strong>COMMITTARE</strong> correttamente
         </p>
     </header>
+
+    <main>
+        <h3>E adesso una poesia:</h3>
+        <h4>Si sta come <br>
+            d'autunno <br>
+            sugli alberi <br>
+            le foglie
+        </h4>
+    </main>
+
+    <footer>-Giuseppe Ungaretti</footer>
     
 </body>
 </html>
