--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Inizio head -->
 <head>
     <link rel="stylesheet" href="style.css">
     <title>ranatriste</title>
 </head>
 
+<!-- Fine head -->
+
 <body>
+<!-- Inizio header -->
     <header>
         <h1>Buongiorno Boolean!</h1>
         <p>Oggi abbiamo avuto un primo approccio con GIT <br>
         In particolare abbiamo imparato a <strong>COMMITTARE</strong> correttamente
         </p>
     </header>
+<!-- Fine header -->
 
-    <main>
+<!-- Inizio main -->
+    <main>      
         <h3>E adesso una poesia:</h3>
         <h4>Si sta come <br>
             d'autunno <br>
@@ -21,7 +28,10 @@
             le foglie
         </h4>
     </main>
+<!-- Fine Main -->
 
+
+<!-- Footer Autore -->
     <footer>-Giuseppe Ungaretti</footer>
     
 </body>
